# geti

./: CONTRIBUTING.md  Makefile  Makefile.shared
.github/: components-path-filters.yml
dev_tools/builder_images/python-builder/: Dockerfile
interactive_ai/: Makefile
interactive_ai/services/jobs/: pyproject.toml
interactive_ai/services/resource/: pyproject.toml
interactive_ai/workflows/common/: pyproject.toml
interactive_ai/workflows/dataset_ie/: pyproject.toml
interactive_ai/workflows/model_test/: pyproject.toml
interactive_ai/workflows/optimize/: pyproject.toml
interactive_ai/workflows/project_ie/: pyproject.toml
interactive_ai/workflows/train/: pyproject.toml
platform/services/installer/: Dockerfile  Makefile  pyproject.toml
platform/services/installer/app/: version.yaml.template
platform/services/installer/app/checks/: resources.py
platform/services/installer/tests/unit/checks/: test_resources_checks.py
web_ui/dex_templates/: Makefile
